--- a/eShop/eShop.Web.Modules/eShop.Web.CustomerPortal/Pages/SearchProductComponent.razor
+++ b/eShop/eShop.Web.Modules/eShop.Web.CustomerPortal/Pages/SearchProductComponent.razor
@@ -1,4 +1,5 @@
-﻿@page "/products"
+﻿@page "/"
+@page "/products"
 
 @inject ISearchProductUseCase searchProductUseCase
 
@@ -8,30 +9,19 @@
 <SearchBarComponent OnSearch="HandleSearch"></SearchBarComponent>
 <br />
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Brand</th>
-            <th>Price</th>
-        </tr>
-    </thead>
-    <tbody>
-        @if (products != null && products.Count() > 0)
+@if (products != null && products.Count() > 0)
+{
+    <div class="row">
+        @foreach (var product in products)
         {
-            foreach (var product in products)
-            {
-                <ProductItemComponent Product="product"></ProductItemComponent>
-            }
+            <ProductCardComponent Product="product"></ProductCardComponent>
         }
-        else
-        {
-            <tr>
-                <td>Cannot find any products!</td>
-            </tr>
-        }
-    </tbody>
-</table>
+    </div>
+}
+else
+{
+    <text>No Products Found</text>
+}
 
 @code {
 
