Woking on shopping cart

--- a/eShop/eShop.Web.Modules/eShop.Web.CustomerPortal/_Imports.razor
+++ b/eShop/eShop.Web.Modules/eShop.Web.CustomerPortal/_Imports.razor
@@ -1,6 +1,11 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
+
 @using eShop.CoreBusiness.Models
+
 @using eShop.UseCases.SearchProductScreen
 @using eShop.UseCases.ViewProductScreen
+@using eShop.UseCases.ShoppingCartScreen
+@using eShop.UseCases.PluginInterfaces.StateStore
+
 @using eShop.Web.CustomerPortal.Controls
