--- a/eShop/eShop.Web/Shared/TopNavBar.razor
+++ b/eShop/eShop.Web/Shared/TopNavBar.razor
@@ -3,6 +3,11 @@
         <li class="nav-item">
             <a href="" class="navbar-brand">eShop</a>
         </li>
+        <li class="nav-item ml-auto">
+            <NavLink class="nav-link" href="cart">
+                <CartComponent></CartComponent>
+            </NavLink>
+        </li>
     </ul>
 </div>
 
