--- a/eShop/eShop.Web/_Imports.razor
+++ b/eShop/eShop.Web/_Imports.razor
@@ -5,5 +5,7 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
+
 @using eShop.Web
 @using eShop.Web.Shared
+@using eShop.Web.CustomerPortal.Controls  
