--- a/eShop/eShop.Web.Modules/eShop.Web.CustomerPortal/Pages/ShoppingCartComponent.razor
+++ b/eShop/eShop.Web.Modules/eShop.Web.CustomerPortal/Pages/ShoppingCartComponent.razor
@@ -1,9 +1,47 @@
-﻿@page "/cart" 
+﻿@page "/cart"
+
+@inject IViewShoppingCartUseCase viewShoppingCartUseCase
 
 <h3>Shopping Cart</h3>
+
+<br />
+
+@if (order != null && order.LineItems != null && order.LineItems.Count > 0)
+{
+    <div class="row">
+        <div class="col-6">
+            <ul>
+                @for (int i = 0; i < order.LineItems.Count; i++)
+                {
+                    // line items
+                    <LineItemComponent LineItem="order.LineItems[i]"></LineItemComponent>
+
+                    @if (i < order.LineItems.Count - 1)
+                    {
+                        <li style="list-style-type:none">
+                            <hr />
+                        </li>
+                    }
+                }
+            </ul>
+        </div>
+        <div class="col">
+            <OrderSummaryComponent Order="order"></OrderSummaryComponent>
+        </div>
+    </div>
+}
 
 @code {
 
     private Order order;
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            order = await viewShoppingCartUseCase.Execute();
+            StateHasChanged();
+        }
+    }
 
 }
