Finished Customer Portal

--- a/eShop/eShop.Web.Modules/eShop.Web.CustomerPortal/_Imports.razor
+++ b/eShop/eShop.Web.Modules/eShop.Web.CustomerPortal/_Imports.razor
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Forms
 
 @using eShop.CoreBusiness.Models
 
@@ -7,5 +8,7 @@
 @using eShop.UseCases.ViewProductScreen
 @using eShop.UseCases.ShoppingCartScreen
 @using eShop.UseCases.PluginInterfaces.StateStore
+@using eShop.UseCases.OrderConfirmationScreen
 
 @using eShop.Web.CustomerPortal.Controls
+@using eShop.Web.CustomerPortal.ViewModels
