--- a/eShop/eShop.Web.Modules/eShop.Web.CustomerPortal/Controls/LineItemComponent.razor
+++ b/eShop/eShop.Web.Modules/eShop.Web.CustomerPortal/Controls/LineItemComponent.razor
@@ -1,4 +1,7 @@
-﻿@if (LineItem != null && LineItem.Product != null)
+﻿@inject IDeleteProductUseCase deleteProductUseCase
+@inject IUpdateQuantityUseCase updateQuantityUseCase
+
+@if (LineItem != null && LineItem.Product != null)
 {
     <li class="row">
         <div class="col">
@@ -21,16 +24,35 @@
 }
 
 @code {
+
     [Parameter]
     public OrderLineItem LineItem { get; set; }
 
-    void HandleQuantityChange()
-    {
+    [Parameter]
+    public EventCallback<Order> OnDeleteProduct { get; set; }
 
+    [Parameter]
+    public EventCallback<Order> OnUpdateQuantity { get; set; }
+
+    async void HandleQuantityChange(ChangeEventArgs e)
+    {
+        if (e.Value == null || string.IsNullOrWhiteSpace(e.Value.ToString())) return;
+
+        int qty = 0;
+
+        if (int.TryParse(e.Value.ToString(), out qty))
+        {
+            if (qty < 0) return;
+
+            var order = await updateQuantityUseCase.Execute(LineItem.ProductId, qty);
+            await OnUpdateQuantity.InvokeAsync(order); // this is envent call back parameter, passing the order to the parent component
+        }
     }
 
-    void DeleteProduct(int productId)
+    async void DeleteProduct(int productId)
     {
-
+        var order = await deleteProductUseCase.Execute(productId);
+        await OnDeleteProduct.InvokeAsync(order); // this is event call back parameter, passing the order to the parent component
     }
+
 }
