--- a/eShop/eShop.Web.Modules/eShop.Web.CustomerPortal/Controls/OrderSummaryComponent.razor
+++ b/eShop/eShop.Web.Modules/eShop.Web.CustomerPortal/Controls/OrderSummaryComponent.razor
@@ -1,4 +1,6 @@
-﻿<div class="card m-2" style="width: 25rem;">
+﻿@inject NavigationManager navigationManager
+
+<div class="card m-2" style="width: 25rem;">
     <div class="card-body">
         <h5 class="card-title">Order Summary</h5>
         <div class="card-text d-flex justify-content-between">
@@ -35,7 +37,11 @@
             </div>
         </div>
     </div>
-    <button class="btn btn-primary" @onclick="PlaceOrder">Place your order</button>
+
+    @if (!HidePlaceOrder)
+    {
+        <button class="btn btn-primary" @onclick="PlaceOrder">Place your order</button>
+    }
 </div>
 
 @code {
@@ -44,6 +50,9 @@
 
     [Parameter]
     public Order Order { get; set; }
+
+    [Parameter]
+    public bool HidePlaceOrder { get; set; } = false;
 
     protected override void OnParametersSet()
     {
@@ -59,6 +68,6 @@
 
     private void PlaceOrder()
     {
-
+        navigationManager.NavigateTo("/PlaceOrder");
     }
 }
