--- a/eShop/eShop.Web.Modules/eShop.Web.CustomerPortal/Pages/ShoppingCartComponent.razor
+++ b/eShop/eShop.Web.Modules/eShop.Web.CustomerPortal/Pages/ShoppingCartComponent.razor
@@ -14,7 +14,9 @@
                 @for (int i = 0; i < order.LineItems.Count; i++)
                 {
                     // line items
-                    <LineItemComponent LineItem="order.LineItems[i]"></LineItemComponent>
+                    <LineItemComponent LineItem="order.LineItems[i]"
+                                       OnDeleteProduct="HandleDeleteProduct"
+                                       OnUpdateQuantity="HandleUpdateQuantity"></LineItemComponent>
 
                     @if (i < order.LineItems.Count - 1)
                     {
@@ -42,6 +44,16 @@
             order = await viewShoppingCartUseCase.Execute();
             StateHasChanged();
         }
+    }
+
+    private void HandleDeleteProduct(Order order)
+    {
+        this.order = order;
+    }
+
+    private void HandleUpdateQuantity(Order order)
+    {
+        this.order = order;
     }
 
 }
