Added authentication and authorization

--- a/eShop/eShop.Web.Modules/eShop.Web.AdminPortal/Pages/OutStandingOrdersComponent.razor
+++ b/eShop/eShop.Web.Modules/eShop.Web.AdminPortal/Pages/OutStandingOrdersComponent.razor
@@ -1,4 +1,7 @@
 ﻿@page "/outstandingorders"
+@page "/admin"
+
+@attribute [Authorize]
 
 @inject IViewOutStandingOrdersUseCase viewOutStandingOrdersUseCase
 
