--- a/eShop/eShop.Web.Modules/eShop.Web.CustomerPortal/_Imports.razor
+++ b/eShop/eShop.Web.Modules/eShop.Web.CustomerPortal/_Imports.razor
@@ -10,5 +10,7 @@
 @using eShop.UseCases.PluginInterfaces.StateStore
 @using eShop.UseCases.OrderConfirmationScreen
 
+@using eShop.Web.Common.Controls
+
 @using eShop.Web.CustomerPortal.Controls
 @using eShop.Web.CustomerPortal.ViewModels
