--- a/eShop/eShop.Web/Shared/TopNavBar.razor
+++ b/eShop/eShop.Web/Shared/TopNavBar.razor
@@ -3,17 +3,29 @@
         <li class="nav-item">
             <a href="" class="navbar-brand">eShop</a>
         </li>
-        <li class="nav-item">
-            <a href="outstandingorders" class="nav-link">Outstanding Orders</a>
-        </li>
-        <li class="nav-item">
-            <a href="processedorders" class="nav-link">Processed Orders</a>
-        </li>
-        <li class="nav-item ml-auto">
-            <NavLink class="nav-link" href="cart">
-                <CartComponent></CartComponent>
-            </NavLink>
-        </li>
+        <AuthorizeView>
+            <Authorized>
+                <li class="nav-item">
+                    <a href="outstandingorders" class="nav-link">Outstanding Orders</a>
+                </li>
+                <li class="nav-item">
+                    <a href="processedorders" class="nav-link">Processed Orders</a>
+                </li>
+                <li class="nav-item ml-auto">
+                    <NavLink class="nav-link" href="/logout">
+                        Sign Out
+                    </NavLink>
+                </li>
+            </Authorized>
+            <NotAuthorized>
+                <li class="nav-item ml-auto">
+                    <NavLink class="nav-link" href="cart">
+                        <CartComponent></CartComponent>
+                    </NavLink>
+                </li>
+            </NotAuthorized>
+        </AuthorizeView>
+
     </ul>
 </div>
 
