--- a/eShop/eShop.Web.Modules/eShop.Web.AdminPortal/Pages/OrderDetailComponent.razor
+++ b/eShop/eShop.Web.Modules/eShop.Web.AdminPortal/Pages/OrderDetailComponent.razor
@@ -1,5 +1,7 @@
 ﻿@page "/orderdetail/{id:int}"
 
+@attribute [Authorize]
+
 @inject NavigationManager navigationManager
 
 @inject IViewOrderDetailUseCase viewOrderDetailUseCase
@@ -53,6 +55,16 @@
 
     private Order order;
 
+    private AuthenticationState authState;
+
+    [CascadingParameter]
+    public Task<AuthenticationState> authStateTask { get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        authState = await authStateTask;
+    }
+
     protected override void OnParametersSet()
     {
         base.OnParametersSet();
@@ -65,9 +77,9 @@
 
     private void HandleProcessOrder()
     {
-        if (order != null)
+        if (order != null && authState != null)
         {
-            processOrderUseCase.Execute(order.OrderId.Value, "admin");
+            processOrderUseCase.Execute(order.OrderId.Value, authState.User.Identity.Name);
             navigationManager.NavigateTo("/outstandingorders");
         }
     }
