--- a/eShop/eShop.Web/App.razor
+++ b/eShop/eShop.Web/App.razor
@@ -1,15 +1,21 @@
 ﻿
-<Router AppAssembly="@typeof(Program).Assembly"
-        AdditionalAssemblies="new[] { 
+<CascadingAuthenticationState>
+    <Router AppAssembly="@typeof(Program).Assembly"
+            AdditionalAssemblies="new[] {
                                 typeof(eShop.Web.CustomerPortal.Pages.ViewProductComponent).Assembly,
                                 typeof(eShop.Web.AdminPortal.Pages.OutStandingOrdersComponent).Assembly,
                               }">
-    <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-    </Found>
-    <NotFound>
-        <LayoutView Layout="@typeof(MainLayout)">
-            <p>Sorry, there's nothing at this address.</p>
-        </LayoutView>
-    </NotFound>
-</Router>
+        <Found Context="routeData">
+            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+                <NotAuthorized>
+                    <LoginComponent></LoginComponent>
+                </NotAuthorized>
+            </AuthorizeRouteView>
+        </Found>
+        <NotFound>
+            <LayoutView Layout="@typeof(MainLayout)">
+                <p>Sorry, there's nothing at this address.</p>
+            </LayoutView>
+        </NotFound>
+    </Router>
+</CascadingAuthenticationState>
